# track

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  readme.txt  track
include/: VehicleTracking.h
source/: VehicleTracking.cpp  main.cpp  operation.cpp
